--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy SingB
+name: Deploy SingBrowser
 
 on:
   push:
@@ -32,19 +32,19 @@ jobs:
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: Build WASM
-        working-directory: ./sing-web
+        working-directory: ./sing-browser
         run: wasm-pack build --target web --release
 
       - name: Prepare Distribution
         run: |
           mkdir dist
           # Static assets required by the web app
-          cp sing-web/index.html dist/
-          cp sing-web/index.js dist/
-          cp sing-web/worker.js dist/
+          cp sing-browser/index.html dist/
+          cp sing-browser/index.js dist/
+          cp sing-browser/worker.js dist/
 
           # wasm-pack output
-          cp -r sing-web/pkg dist/
+          cp -r sing-browser/pkg dist/
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
