--- a/sing-core/Cargo.toml
+++ b/sing-core/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "sing-core"
-version = "0.5.0"
+version = "0.4.0"
 edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+block-aligner = { version = "0.5", features = ["simd_avx2"] }
