--- a/sing-cli/Cargo.toml
+++ b/sing-cli/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
 crossbeam-channel = "0.5"
+memmap2 = "0.9"
 mimalloc = { version = "0.1", default-features = false }
 needletail = { version = "0.6", features = ["compression"] }
 sing-core = { path = "../sing-core" }
