--- a/sing-core/Cargo.toml
+++ b/sing-core/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0"
+bytemuck = "1.16"
+memmap2 = "0.9"
+mimalloc = { version = "0.1", default-features = false }
