--- a/sing-cli/Cargo.toml
+++ b/sing-cli/Cargo.toml
@@ -13,3 +13,4 @@ clap = { version = "4.4", features = ["derive"] }
 crossbeam-channel = "0.5"
 needletail = { version = "0.6", features = ["compression"] }
 sing-core = { path = "../sing-core" }
+mimalloc = { version = "0.1", default-features = false }
