--- a/sing-cli/Cargo.toml
+++ b/sing-cli/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0"
 clap = { version = "4.4", features = ["derive"] }
+crossbeam = "0.8"
 crossbeam-channel = "0.5"
 needletail = { version = "0.6", features = ["flate2"] }
 sing-core = { path = "../sing-core" }
