--- a/sing-core/Cargo.toml
+++ b/sing-core/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "sing-core"
 version = "0.6.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
 bytemuck = "1.16"
 memmap2 = "0.9"
+rkyv = { version = "0.8", default-features = false, features = ["std", "alloc"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 libc = "0.2"
